--- a/report/casing.tex
+++ b/report/casing.tex
@@ -16,7 +16,7 @@ This one had some problems, one of them is that the case is too big for any of t
 \begin{figure}[H]
 \begin{center}
 	\includegraphics[width = 10cm]{Figures/Case_rev_1.png}
-	\caption{First revision of the case}
+	\caption{First (1) revision of the case.}
 	\label{Case_rev_1}
 \end{center}
 \end{figure}
@@ -29,7 +29,7 @@ The next revision was like the first one, it had the same shape and idea as the 
 \begin{figure}[H]
 \begin{center}
 	\includegraphics[width = 10cm]{Figures/Case_rev_2.png}
-	\caption{Second revision of the case}
+	\caption{Second (2) revision of the case.}
 	\label{Case_rev_2}
 \end{center}
 \end{figure}
@@ -48,7 +48,7 @@ When building the third version on the 3D-printer the problems with the model co
 \begin{figure}[H]
 \begin{center}
 	\includegraphics[width = 10cm]{Figures/Case_rev_3.png}
-	\caption{Third revision of the case}
+	\caption{Third (3) revision of the case.}
 	\label{Case_rev_2}
 \end{center}
 \end{figure}
@@ -64,7 +64,7 @@ Due to the material cost and time it takes for the 3D printer to produce models 
 \begin{figure}[H]
 \begin{center}
 	\includegraphics[width = 10cm]{Figures/Case_rev_4.png}
-	\caption{Final version of the case}
+	\caption{Fourth (4) and final version of the case.}
 	\label{Case_rev_4}
 \end{center}
 \end{figure}
