--- a/report/glossary.tex
+++ b/report/glossary.tex
@@ -11,7 +11,7 @@
 description={Application Programming Interface}, 
 first={Application Programming Interface (API)\glsadd{apig}}, see=[Glossary:]{apig}}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% PLEASE FIX THESE ELIAS
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% PLEASE FIX THIS ELIAS
 %%% 2s
 \newglossaryentry{2sg}{name={NAME},
     description={Acronym Explanation (NAME) description}}
@@ -26,8 +26,6 @@ first={Acronym Explanation (NAME)\glsadd{2sg}}, see=[Glossary:]{2sg}}
 \newglossaryentry{ti}{type=\acronymtype, name={TI}, 
 description={Texas Instruments Inc.}, 
 first={Texas Instruments Inc. (TI)\glsadd{tig}}, see=[Glossary:]{tig}}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%% IC
 \newglossaryentry{icg}{name={IC},
