--- a/report/sensors.tex
+++ b/report/sensors.tex
@@ -20,7 +20,7 @@ Other solutions are, either way, more difficult to apply and mount or more compl
 \begin{figure}[H]
 \begin{center}
 	\includegraphics[width = 10cm]{Figures/Prototyp_1.png}
-	\caption{Function of first prototype}
+	\caption{Function of first prototype.}
 	\label{Press_sens_impl}
 \end{center}
 \end{figure}
@@ -33,7 +33,7 @@ A model of the pressure sensor was created in order to clearly show the function
 \begin{figure}[H]
 \begin{center}
 	\includegraphics[width = 10cm]{Figures/Press_sens_prot_1.png}
-	\caption{First prototype of a force sensor}
+	\caption{First prototype of a force sensor.}
 	\label{Press_sens_prot_1}
 \end{center}
 \end{figure}
@@ -46,7 +46,7 @@ A better solution is to make some research into load cells, which is a sensor wh
 \begin{figure}[H]
 \begin{center}
 	\includegraphics[width = 10cm]{Figures/Press_sens_func_2.png}
-	\caption{Function of second prototype}
+	\caption{Function of second prototype.}
 	\label{Press_sens_prot_2}
 \end{center}
 \end{figure}
@@ -78,7 +78,7 @@ The implementation is easy and the gain can easily be determined by connection a
 \begin{figure}[H]
 \begin{center}
 	\includegraphics[width = 10cm]{Figures/INA126_pinout.png}
-	\caption{Amplifier for the load cell signal}
+	\caption{Amplifier for the load cell signal.}
 	\label{INA126}
 \end{center}
 \end{figure}
@@ -107,7 +107,7 @@ One of the best implementations of a height sensor would be the use of a linear 
 \begin{figure}[H]% As mentioned before, H -> tb, Refer to all figures used, use width only to /restrict/ size.
 \begin{center}
 	\includegraphics[width = 10cm]{Figures/microepsilon_mk30.png}
-	\caption{Linear draw wire sensor, Micro epsilon MK30}
+	\caption{Linear draw wire sensor, Micro epsilon MK30.}
 	\label{Draw_sensor}
 \end{center}
 \end{figure}
@@ -122,7 +122,7 @@ The chosen circuit is VL53L0X from Adafruit\cite{micro_lidar}.
 \begin{figure}[H]
 	\centering
 	\includegraphics[width = 10cm]{Figures/Adafruit_height_sensor.png}
-	\caption{Time of flight, $\mu$\gls{lidar}, distance sensor Adafruit VL53L0X}
+	\caption{Time of flight, $\mu$\gls{lidar}, distance sensor Adafruit VL53L0X.}
 	\label{micro_lidar}
 \end{figure}
 
@@ -135,7 +135,7 @@ All the information about this sensor when used with a cover widow can be found 
 \begin{figure}[H]
 	\centering
 	\includegraphics[width = 10cm]{Figures/height_measure.jpg}
-	\caption{Height measurement model}
+	\caption{Height measurement model.}
 	\label{height_measure}
 \end{figure}
 
