--- a/report/bms.tex
+++ b/report/bms.tex
@@ -10,7 +10,7 @@ Memory effects present in other chemistries cause gradual loss of capacity if no
 
 Water-based electrolytes are common in most batteries but as electrolysis begins at two volts in water and the voltages present in lithium cells are higher than that, that is not possible. Organic solvents are instead used. These solvents are flammable and have high vapour pressures. The increased performance of \gls{lion} batteries comes with higher severity if something would happen to go wrong, so they have to be handled with extra care.
 
-One of the most common form factors is the cylindrical cell referred to as 18650. That is 18 mm in diameter and 65 mm in length.\cite{book26}. The figure \autoref{fig:cellstruct} displays the parts that build up such a cylindrical cell.
+One of the most common form factors is the cylindrical cell referred to as 18650. That is 18 mm in diameter and 65 mm in length \cite{book26}. The figure \autoref{fig:cellstruct} displays the parts that build up such a cylindrical cell.
 
 \begin{figure}[H]
 	\centering
